# optimal-crop-resolution

./: README.md  __init__.py  aspect_ratio_calculator.py  pyproject.toml  resolution_matcher.py  test_aspect_ratio.py
.github/workflows/: publish.yml
